tests/marouter/errors/false_options/unknown_measure/errors.marouter
Warning: No weight data was loaded for attribute 'foo'.
